<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/info_window_bg"
    android:orientation="vertical"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvHostname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_bold"
        android:text="@string/hostname"
        android:textColor="@color/white"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/tvIp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/ip_xml"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvEstado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/estado_xml"
        android:textColor="@color/white"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/tvTipo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/montserrat_regular"
        android:text="@string/protocolo_xml"
        android:textColor="@color/white"
        android:textSize="12sp" />

</LinearLayout>
