<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardAlarm"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:backgroundTint="@color/black"
    app:cardCornerRadius="14dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="12dp">

        <View
            android:id="@+id/statusIndicator"
            android:layout_width="6dp"
            android:layout_height="0dp"
            android:background="@color/green_theme"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/contentLayout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/statusIndicator"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tvSegmento"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:text="@string/segmento_mex_usa"
                android:textColor="@color/white"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/tvPuntaA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="4dp"
                android:text="@string/punta_a_r1_10_0_0_1"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvPuntaB"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="4dp"
                android:text="@string/punta_b_r2_10_0_0_2"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tvProtocolo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/protocolo_bgp__"
                android:textColor="@color/white"
                android:textSize="12sp" />

            <TextView
                android:id="@+id/tvEstado"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/montserrat_bold"
                android:paddingTop="4dp"
                android:text="@string/estado_ok"
                android:textColor="@color/green_theme"
                android:textSize="12sp" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
