<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/cardNode"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    android:background="@color/black"
    app:cardCornerRadius="14dp"
    app:strokeColor="@color/black"
    app:strokeWidth="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#252525"
        android:orientation="vertical"
        android:padding="12dp">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:contentDescription="@string/conexion"
            android:src="@drawable/image_segmento_nodo" />

        <TextView
            android:id="@+id/tvHostname"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_bold"
            android:text="@string/segmento_xml"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/tvIpAddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/montserrat_regular"
            android:text="@string/cantidad_de_enlaces"
            android:textColor="@color/white"
            android:textSize="11sp" />
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
